# Projecte_web

./: .env_ex  .gitignore  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
features/: create_review.feature  environment.py
features/steps/: create_review_steps.py
league_project/: asgi.py  settings.py  urls.py  wsgi.py
league_project_env/: pyvenv.cfg
lol_app/: admin.py  models.py  urls.py  views.py
lol_app/migrations/: 0001_initial.py
lol_app/static/: style.css
lol_app/templates/: base.html  base2.html  champion_list.html  home.html  home2.html  items.html  logged_out.html  login.html  profile.html  puuid_form.html  puuid_result.html  register.html  review_confirm_delete.html  review_create.html  review_update.html  review_update_list.html
lol_app/templates/homes/: champion_list.html  home.html  home2.html
lol_app/templates/registration/: logged_out.html  register.html
lol_app/templates/review_delete/: review_delete_list.html
lol_app/templates/reviews/: review_detail.html
