[project]
name = "lol-django-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Resa Perez",email = "drp5@alumnes.udl.cat"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (==5.1.6)",
    "requests (==2.32.3)",
    "asgiref (==3.8.1)",
    "certifi (==2025.1.31)",
    "charset-normalizer (==3.4.1)",
    "idna (==3.10)",
    "pillow (==11.1.0)",
    "sqlparse (==0.5.3)",
    "urllib3 (==2.3.0)",
    "behave-django (>=1.5.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
